# walksat-cuda

./: CMakeLists.txt  sls-cuda.sln
sls-cuda/: defs.h  kernel.cu  main.cpp  sls-cuda.vcxproj  stopwatch.cuh  util.cpp
